--- a/css/cotizar.css
+++ b/css/cotizar.css
@@ -274,6 +274,11 @@ button {
     transform: translateY(0); /* Simula el click (presionarse) */
     box-shadow: 0 2px 10px rgba(124, 58, 237, 0.3);
 }
+@media print {
+    .historial-container {
+        display: none !important;
+    }
+}
 
 /* =========================
       HEADER FACTURA
@@ -479,4 +484,5 @@ button {
         color: black !important;
     }
 }
+
 
