--- a/css/cotizar-user.css
+++ b/css/cotizar-user.css
@@ -479,3 +479,19 @@ button {
         color: black !important;
     }
 }
+
+.btn-save {
+    width: 100%;
+    margin-top: 10px;
+    padding: 10px;
+    background: var(--accent1);
+    color: white;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+.btn-save:hover {
+    background: var(--accent2);
+}
