--- a/css/historial-admin.css
+++ b/css/historial-admin.css
@@ -8,8 +8,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  position: fixed;
-  top: 0;
+  position: relative;
+  top: auto;
   overflow: hidden;
   z-index: 999;
 }
