--- a/css/historial-admin.css
+++ b/css/historial-admin.css
@@ -8,8 +8,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  position: relative;
-  top: auto;
+  position: fixed;
+  top: 0;
   overflow: hidden;
   z-index: 999;
 }
@@ -108,13 +108,14 @@
     --text: #eef2ff;
 }
 
-body {
+body{
     background: linear-gradient(135deg, var(--bg1), var(--bg2));
     font-family: "Poppins", sans-serif;
     color: var(--text);
     margin: 0;
-    padding: 60px 0 0 0;
+    padding: 0;
 }
+
 .historial-container {
     width: 80%;
     margin: 40px auto;
